tests/baselines/reference/parserES5ForOfStatement3.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement3.ts(1,13): error TS1091: Only a single variable declaration is allowed in a 'for...of' statement.


==== tests/cases/conformance/parser/ecmascript5/Statements/parserES5ForOfStatement3.ts (1 errors) ====
    for (var a, b of X) {
                ~
!!! error TS1091: Only a single variable declaration is allowed in a 'for...of' statement.
    }